<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beiji_1"
    tools:context="com.example.admin.job_4_1.WeatherActivity"
    android:orientation="vertical">

    <ScrollView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:paddingRight="25dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/tv_shengbu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />

                    <TextView
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@color/tv_chengshi"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/tv_chengshi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textSize="48sp"
                        android:textStyle="normal|bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_marginTop="28dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/tv_rqi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textColor="@color/baishe" />

                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/tv_tain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textSize="18sp"
                        android:textStyle="normal|italic"
                        android:textAllCaps="false"
                        android:textColor="@color/baishe" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="185dp"
                    android:layout_height="185dp"
                    android:src="@drawable/weather_1"
                    android:id="@+id/imageView" />

                <LinearLayout
                    android:paddingTop="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/tv_tianqi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:textSize="38sp"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:text="@string/tv_wendu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textSize="14sp"
                        android:textColor="@color/baishe" />

                    <TextView
                        android:text="@string/tv_wenduMaxMin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textSize="16sp"
                        android:textColor="@color/hongshe" />

                    <TextView
                        android:text="@string/tv_wenduMaxMin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        android:textSize="16dp"
                        android:textColor="@color/baishe" />

                    <TextView
                        android:text="@string/wenxts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12"
                        android:textColor="@color/baishe" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ListView
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="10dp">
    </ListView>


</LinearLayout>
